--- Changes since 2.0alpha1 ---

- Add a throbber when sending messages
- Confirm sending empty messages.
- Don't force the message pane into being shown if previously hidden with F8.
- Make sure the focus is in the recipient field when hitting "edit" to edit the
to:, cc: or bcc: list.
- Change 'n' and 'p' keyboard shortcuts to the standard 'b' and 'f' Thunderbird
ones. Prevents conflicts with muttator and other extensions which bind unused
keys in Thunderbird.
- Fix issue where archiving messages in a thread would prevent the last
remaining message from being marked as read.
- Make sure conversation view works fine in other folder tabs.
- Take into account Reply-To headers when present for quick reply.
- Fix "Copy Complete" issue.
- Fixed issue where you could not use quick reply for recipients whose names
contained commas.
- Make standard keyboard shortcuts work even when the conversation view has
focus (forward them to the main window).
- Make sure we mark message as "replied to" (small blue arrow in the message
list).