@@ -1,5 +1,7 @@
 --- Changes since 2.0alpha1 ---
 
+- Fix a rare case where the quick reply would be unusable
+- Add links to Google Profiles and Flickr photo pages
 - Add a throbber when sending messages
 - Confirm sending empty messages.
 - Don't force the message pane into being shown if previously hidden with F8.
